
New features and other changes:
1. Added Update-VisioStencils function. Added Stencils config item.
2. Added Open-VisualStudioCodeSettings (aka Open-VSCodeSettings) function.

######################
#                    #
#      v1.3.0.4      #
#      May 2021      #
######################
Known issues:
1. Get-NICInfo doesn't always run.
2. There is a Microsoft bug that prevents setting some SCHANNEL values to 0xFFFFFFFF (enabled). This causes some functions to throw errors and those values have to be manually set through the user interface. Bug has existed since at least 2006.

New features and other changes:
1. Added Disable-TLS1.0, Enable-TLS1.0, Disable-TLS1.1, Enable-TLS1.1, Disable-TLS1.2, and Enable-TLS1.2 functions. #DevSkim: ignore DS169125,DS440000
2. Corrected some issues in Set-RemediationValues.
3. Fixed an issue in Set-FeatureSettingsOverride.
4. Added Get-HWInfo which will list a lot of information about a local or remote computer.

Removed items:
1. Set-SCHANNELsettings. Use Set-RemediationValues instead. Until config file values are used it's to cumbersome to maintain all the settings in two locations.

######################
#                    #
#      v1.3.0.3      #
#     April 2021     #
######################
Known issues:
1. Get-NICInfo doesn't always run.

New features and other changes:
1. Added Convert-DaysToWorkDay. Takes into account weekends and US Federal Holidays ranging from 2018 to 2030. Can specify date to start from.
2. Fixed errors when a program is not already installed in InstallRemote.ps1.
3. Converted Chrome, Firefox, and Java in InstallRemote.ps1 to the newer version checking code and removed the uninstall portion of the code that caused Chrome to not always install after.
4. Adjusted some times in InstallRemote.ps1 based on observations. It will take longer to run but there should be fewer problems.
5. Removed several hardcoded paths in InstallRemote.ps1 and made them more dynamic.