@@ -1096,6 +1096,69 @@ Function Get-ComputerModel {
 New-Alias -Name "Get-Model" -Value Get-ComputerModel
 
 
+function Get-DayOfYear {
+<#
+.NOTES
+    Author: Skyler Hart
+    Created: 2021-05-20 20:48:46
+    Last Edit: 2021-05-20 21:48:24
+    Keywords: Day of year, Julian
+.LINK
+    https://wstools.dev
+#>
+    [CmdletBinding()]
+    param(
+        [Parameter(
+            Mandatory=$false,
+            Position=0
+        )]
+        [ValidateLength(1,10)]
+        [Alias('Date')]
+        [string]$Day = (Get-Date -Format "yyyy-MM-dd"),
+
+        [Parameter(
+            Mandatory=$false,
+            Position=1
+        )]
+        [ValidateLength(4,4)]
+        [string]$Year
+    )
+
+    $c = $Day.Length
+    if ($c -le 3) {
+        $nd = $Day - 1
+        if ($null -eq $Year -or $Year -eq "") {
+            [string]$Year = (Get-Date).Year
+            $info = (Get-Date -Day 1 -Month 1 -Year $Year).AddDays($nd)
+        }
+        else {
+            $info = (Get-Date -Day 1 -Month 1 -Year $Year).AddDays($nd)
+        }
+        $info
+    }
+    elseif ($c -eq 8) {
+        $y = $Day.Substring(0,4)
+        $m = $Day.Substring(4)
+        $m = $m.Substring(0,2)
+        $d = $Day.Substring(6)
+        $info = (Get-Date -Year $y -Month $m -Day $d).DayOfYear
+        $info
+    }
+    elseif ($c -eq 10) {
+        $y = $Day.Substring(0,4)
+        $m = $Day.Substring(5)
+        $m = $m.Substring(0,2)
+        $d = $Day.Substring(8)
+        $info = (Get-Date -Year $y -Month $m -Day $d).DayOfYear
+        $info
+    }
+    else {
+        Write-Error "Not in the correct format. Format must be entered in the format x, xx, or xxx for a day of the year. Ex: 12. For a date, it must be entered in the format yyyyMMdd or yyyy-MM-dd. Ex: 2021-05-20" -Category SyntaxError
+    }
+}
+New-Alias -Name "Get-JulianDay" -Value Get-DayOfYear
+
+
 Function Get-DefaultBrowserPath {
 <#
 .NOTES
@@ -1582,6 +1645,9 @@ function Get-HWInfo {
                         elseif ($Build -eq 19042) {
                             $OS = $OS + " v20H2"
                         }
+                        elseif ($Build -eq 19043) {
+                            $OS = $OS + " v21H1"
+                        }
                     }#if os win 10, srv 2016, or srv 2019
 
                     #Get Processor Information
@@ -1735,7 +1801,7 @@ function Get-HWInfo {
             NetAdapterName,IPAddress,Subnet,Gateway,DNS,MACAddress,ProcessorManufacturer,ProcessorName,Processors,CoresPerProcessor,TotalCores,`
             InstalledRAM,MaxRAM,RAMSlotsUsed,TotalRAMSlots,LogicalDiskName,LogicalDiskSize,LogicalDiskFree,LogicalDiskUsed
     }#if admin
-    else {Write-Error}
+    else {Write-Error "Not admin. Please run PowerShell as admin."}
 }
 
 
@@ -2422,6 +2488,9 @@ Function Get-OperatingSystem {
                     elseif ($Build -eq 19042) {
                         $OS = $OS + " v20H2"
                     }
+                    elseif ($Build -eq 19043) {
+                        $OS = $OS + " v21H1"
+                    }
                 }#if os win 10, srv 2016, or srv 2019
             }#try
             catch {
@@ -2479,6 +2548,9 @@ Function Get-OperatingSystem {
                         }
                         elseif ($Build -eq 19042) {
                             $OS = $OS + " v20H2"
+                        }
+                        elseif ($Build -eq 19043) {
+                            $OS = $OS + " v21H1"
                         }
                     }#if os win 10, srv 2016, or srv 2019
                     else {$OS = $value}
@@ -2602,6 +2674,9 @@ Function Get-OperatingSystem {
                 }
                 elseif ($Build -eq 19042) {
                     $OS = $OS + " v20H2"
+                }
+                elseif ($Build -eq 19043) {
+                    $OS = $OS + " v21H1"
                 }
             }#if os win 10, srv 2016, or srv 2019
             else {$OS = $value}
